:hammer: Update section 2.

--- a/UI/PyQt5/section_3/video_1_calling_dialogs_from_main_window.ui
+++ b/UI/PyQt5/section_3/video_1_calling_dialogs_from_main_window.ui
@@ -28,6 +28,21 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
+      <widget class="QLabel" name="label">
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="pushButton">
        <property name="text">
         <string>Call Dialog</string>
