--- a/Python/Django/src/templates/base.html
+++ b/Python/Django/src/templates/base.html
@@ -6,7 +6,8 @@
 </head>
 
 <body>
-    <h1>This is a navbar.</h1>
+    {% include 'navbar.html' %}
+
     {% block content %}
     replace me
     {% endblock %}
