:zap: Rendering context in a template.

--- a/Python/Django/src/templates/about.html
+++ b/Python/Django/src/templates/about.html
@@ -3,4 +3,9 @@
 {% block content %}
 <h1>About</h1>
 <p>This is a template.</p>
+
+<p>
+    {{ my_text }}, {{ my_number }}
+    {{ my_list }}
+</p>
 {% endblock %}
