--- a/Python/Django/src/templates/about.html
+++ b/Python/Django/src/templates/about.html
@@ -8,4 +8,16 @@
     {{ my_text }}, {{ my_number }}
     {{ my_list }}
 </p>
+
+<ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+</ul>
+
+<ul>
+    {% for my_sub_item in my_list %}
+    <li>{{ forloop.counter }} - {{ my_sub_item}}</li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
