:zap: Using conditions in a template.

--- a/Python/Django/src/templates/about.html
+++ b/Python/Django/src/templates/about.html
@@ -20,4 +20,16 @@
     {% endfor %}
 </ul>
 
+<ul>
+    {% for abc in my_list %}
+    {% if abc == 312 %}
+    <li>{{ forloop.counter }} - {{ abc|add:22}}</li>
+    {% elif abc == "Abc" %}
+    <li>This is not the network.</li>
+    {% else %}
+    <li>{{ forloop.counter }} - {{ abc }}</li>
+    {% endif %}
+    {% endfor %}
+</ul>
+
 {% endblock %}
